tests/NormalTests/paczka1/small_fuzzy/98409622.err
Error in line 2: eTOvcO S935 56,2
Error in line 5: tLQQRya9j S935 7,5
